--- a/src/Application/EpostBundle/Resources/views/EpostComments/indexownerblog.html.twig
+++ b/src/Application/EpostBundle/Resources/views/EpostComments/indexownerblog.html.twig
@@ -56,7 +56,19 @@ COMMENTAIRES SUR MES POSTS
            <td>{{ entity.updated|date }}</td>
            <td>{{ entity.created|date }}</td>
                <td>{{ entity.approved }}</td>
-
+   <td>
+                             <a href="{{ path('epost_showstandard', { 'blog_id': entity.id,'slug': entity.slug }) }}">
+             {#
+                    <a href="{{ path('epost_show', { 'id': entity.id }) }}">#}
+                        <img src="{{ asset('bundles/applicationepost/images/detail.png') }}" alt="show" width="15" height="15" />
+                    </a>
+                </td>
+            
+                 <td>
+                    <a href="{{ path('epostnotes_addfrompost', { 'id': entity.id }) }}">
+                        <img src="{{ asset('bundles/applicationepost/images/Stara.gif') }}" alt="show" width="15" height="15" />
+                    </a>
+                </td> 
                     </tr>
         {% endfor %}
                 </tbody>
