--- a/src/Application/EpostBundle/Resources/views/Epost/index.html.twig
+++ b/src/Application/EpostBundle/Resources/views/Epost/index.html.twig
@@ -272,7 +272,8 @@ MES POSTS
                 {# <th>Image</th>#}
                  <th>ImageMedia</th>
                    <th>Commentaires</th>
-                   <th>Note Globale</th>
+                      <th{% if paginationa.isSorted('a.globalnote.note') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationa, 'Note Globale', 'a.globalnote.note') }}</th>
+             
                  <th colspan="2">Actions</th>
             </tr>
         </thead>
