--- a/src/Application/EpostBundle/Resources/views/Epost/index.html.twig
+++ b/src/Application/EpostBundle/Resources/views/Epost/index.html.twig
@@ -134,8 +134,10 @@ MES POSTS
  <th{% if paginationa.isSorted('a.resume') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationa, 'Résumé', 'a.resume') }}</th>
    {#<th>Image</th>#}
     <th>ImageMedia</th>
-    <th>Commentaires</th>
-     <th>Note Globale</th>
+         <th{% if paginationa.isSorted('a.commentscount') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationa, 'Commentaires', 'a.commentscount') }}</th>
+              
+          <th{% if paginationa.isSorted('e.globalnote') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationa, 'Note Globale', 'e.globalnote') }}</th>
+             
            {% if is_granted("ROLE_ADMIN") %}
  <th colspan="3"><center>Actions</center></th>
 {% else %}
@@ -196,12 +198,14 @@ MES POSTS
 {#<img src="/sf1/{% path post.image, 'small' %}" width="50" /> #}
 <img src="{% path entity.imageMedia, 'small' %}" width="50" /> 
           </td>
-            {% if entity.comments is not null %}
-                  <td>{{ entity.comments|length }}</td>
-                  {% else %}
-                  <td>---</td>
+          <td>
+            {% if entity.commentscount is not null %}
+                  {{ entity.commentscount }}
+              {% else %}
+                ---
                   {% endif %}
-            
+                </td>
+          
                   <td>           {% if entity.globalnote is not null %}
    {#    Note Globale: #}
            <div class="star" data-score="{{ entity.globalnote }}"></div>
@@ -271,8 +275,10 @@ MES POSTS
                 
                 {# <th>Image</th>#}
                  <th>ImageMedia</th>
-                   <th>Commentaires</th>
-                      <th{% if paginationa.isSorted('e.globalnote') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationa, 'Note Globale', 'e.globalnote') }}</th>
+                 
+                   <th{% if paginationb.isSorted('a.commentscount') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationb, 'Commentaires', 'a.commentscount') }}</th>
+                   
+                      <th{% if paginationb.isSorted('e.globalnote') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationb, 'Note Globale', 'e.globalnote') }}</th>
              
                  <th colspan="2">Actions</th>
             </tr>
@@ -330,12 +336,19 @@ MES POSTS
 {#<img src="/sf1/{% path post.image, 'small' %}" width="50" /> #}
 <img src="{% path entity.imageMedia, 'small' %}" width="50" /> 
           </td>
-           
+           <td>
+            {% if entity.commentscount is not null %}
+                  {{ entity.commentscount }}
+              {% else %}
+                ---
+                  {% endif %}
+                </td>
+                {#
                     {% if entity.comments is not null %}
                   <td>{{ entity.comments|length }}</td>
                   {% else %}
                   <td>---</td>
-                  {% endif %}
+                  {% endif %}#}
        <td>           {% if entity.globalnote is not null %}
    {#    Note Globale: #}
            <div class="star" data-score="{{ entity.globalnote }}"></div>
